--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,28 @@ a {
     text-decoration: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin-top: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.list {
+    list-style: none;
+    margin: 0;
+    padding-left: 0;
+}
+
 .visually-hidden {
     position: absolute;
     white-space: nowrap;
@@ -26,39 +48,72 @@ a {
 }
 
 body {
+    margin: 0;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     color: var(--primary-text-color);
     background-color: var(--main-background-color);
+    box-sizing: border-box;
+}
+.container {
+    width: 1200px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
-.list {
-    list-style: none;
+.header{
+    border: 1px solid #ECECEC;
+}
+.header-container {
+    display: flex;
+    justify-content: space-between;
 }
 
-.logo-web {
-    font-family: 'Raleway', sans-serif;
-    color: var(--blue-color);
-    font-style: normal;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
+.header-nav,
+.nav-list {
+    display: flex;
+    align-items: center;
 }
+.nav-list {
+    gap: 50px;
+}
+.nav-link {
+    display: block;
+    padding: 32px 0 32px;
+}
+
+.contact-list {
+    display: flex;
+    align-self: center;
+    margin-left: auto;
+    gap: 40px;
+}
+.contacts-link {
+    display: block;
+    padding: 32px 0 32px;
+}
+
+.hero {
+    text-align: center;
+    margin-bottom: 94px;
+    display: block;
+}
+
 
 .logo-studio {
-    font-family: 'Raleway', sans-serif;
-    color: var(--primary-text-color);
-    font-style: normal;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
+    color: var(--primary-text-color)
 }
-
-.logo-footer {
+.header-logo {
+    display: block;
+    margin-right: 93px;
     font-family: 'Raleway', sans-serif;
-    color: var(--white-color);
+    color: var(--blue-color);
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
@@ -69,6 +124,8 @@ body {
 button {
     cursor: pointer;
     font-family: inherit;
+    border: none;
+    border-radius: 4px;
 }
 
 .nav-link {
@@ -77,6 +134,7 @@ button {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
+    display: block;
 }
 
 .nav-link:hover,
@@ -102,7 +160,24 @@ button {
 }
 
 footer {
-    background-color: #2F303A;
+    background-color: var(--footer-color);
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+.logo-footer {
+    font-family: 'Raleway', sans-serif;
+    color: var(--blue-color);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    margin-bottom: 28px;
+    display: block;
+}
+
+.logo-footer-studio {
+    color: var(--white-color);
 }
 
 .address-link {
@@ -113,6 +188,10 @@ footer {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--white-color);
+}
+.address-item {
+    display: block;
+    margin-bottom: 12px;
 }
 
 .address-link:hover,
@@ -136,9 +215,15 @@ footer {
 }
 
 /*----Studio styles---*/
-.order {
+.hero-section{
     background-color: var(--footer-color);
     color: var(--white-color);
+    display: block;
+    align-items: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    text-align: center;
+
 }
 
 .main-title {
@@ -148,19 +233,24 @@ footer {
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+    margin-bottom: 30px;
 }
 
 .order-button {
+    display: inline-block;
     background-color: var(--blue-color);
     color: var(--white-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
-    align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
     border-radius: 4px;
+    min-width: 200px;
+    padding: 10px 24px;
+    margin: 0 auto;
 }
 
 .order-button:hover,
@@ -168,13 +258,6 @@ footer {
     background-color: blue;
 }
 
-.secondary-title {
-    font-style: normal;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-}
 
 .adv-title {
     font-size: 14px;
@@ -182,6 +265,7 @@ footer {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--primary-text-color);
+    margin-bottom: 10px;
 }
 
 .adv-subtitle {
@@ -191,12 +275,48 @@ footer {
     color: var(--secondary-text-color);
 }
 
+.adv-list {
+    display: flex;
+    gap: 30px;
+}
+.adv-item {
+    display: block;
+    max-width: 270px;
+}
+
+.about-section {
+    padding-bottom: 94px;
+    align-items: center;
+}
+.secondary-title {
+    font-style: normal;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+    padding-top: 0;
+}
+.img-list {
+    display: flex;
+    gap: 30px;
+}
 .team-section {
     background-color: var(--secondary-background-color);
 }
 
 .team-item {
     background-color: var(--main-background-color);
+    border-radius: 0px 0px 4px 4px;
+    box-shadow:  0 4px 4px rgba(0, 0, 0, 0.25);
+}
+.team-list  {
+    display: flex;
+    gap: 30px;
+}
+.team-box {
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .team-title {
@@ -206,6 +326,7 @@ footer {
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
+    margin-bottom: 10px;
 }
 
 .team-subtitle {
@@ -214,28 +335,42 @@ footer {
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
+    margin-bottom: 0;
 }
 
 /*--Portfolio styles--*/
 
 .portfolio {
     background-color: var(--main-background-color);
+    padding-top: 100px;
+    padding-bottom: 94px;
 }
 
 .portfolio-btn {
+    padding: 6px 22px;
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
     text-align: center;
     letter-spacing: 0.03em;
+    border: none;
+    border-color: transparent;
     border-radius: 4px;
     color: var(--primary-text-color);
-    background-color: var(--secondary-background-color)
+    background-color: var(--secondary-background-color);
+}
+.portfolio-btns {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    margin-bottom: 50px;
 }
 
 .portfolio-btn:hover,
 .portfolio-btn:focus {
+    padding-right: 25px;
+    padding-left: 25px;
     background-color: var(--blue-color);
     color: var(--white-color);
 }
@@ -243,17 +378,32 @@ footer {
 .product-item {
     background-color: var(--main-background-color);
 }
-
+.products-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
 .product-title {
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
     color: var(--primary-text-color);
+    margin-top: 0;
+    margin-bottom: 20px;
+    display: block;
 }
 
 .product-subtitle {
+    display: block;
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
+    margin-bottom: 0;
+}
+.product-container {
+    padding: 20px 24px;
+    border: 1px solid #EEEEEE;
+    border-top: none;
+    display: block;
 }
